
    HADOOP-11112. TestKMSWithZK does not use KEY_PROVIDER_URI. (tucu via wang)

    HADOOP-11111 MiniKDC to use locale EN_US for case conversions. (stevel)

    HADOOP-10731. Remove @date JavaDoc comment in ProgramDriver class (Henry 
    Saputra via aw)

    HADOOP-10681. Remove unnecessary synchronization from Snappy & Zlib
    codecs. (Gopal Vijayaraghavan via acmurthy)

  BUG FIXES

    HADOOP-10781. Unportable getgrouplist() usage breaks FreeBSD (Dmitry
    Sivachenko via Colin Patrick McCabe)

    HADOOP-10507. FsShell setfacl can throw ArrayIndexOutOfBoundsException when
    no perm is specified. (Stephen Chu and Sathish Gurram via cnauroth)

    HADOOP-10780. hadoop_user_info_alloc fails on FreeBSD due to incorrect
    sysconf use (Dmitry Sivachenko via Colin Patrick McCabe)

    HADOOP-10810. Clean up native code compilation warnings. (cnauroth)

    HADOOP-9921. daemon scripts should remove pid file on stop call after stop
    or process is found not running ( vinayakumarb )

    HADOOP-10591.  Compression codecs must used pooled direct buffers or
    deallocate direct buffers when stream is closed (cmccabe)

    HADOOP-10857.  Native Libraries Guide doen't mention a dependency on
    openssl-development package (ozawa via cmccabe)

    HADOOP-10866. RawLocalFileSystem fails to read symlink targets via the stat
    command when the format of the stat command uses non-curly quotes (yzhang
    via cmccabe)

    HADOOP-10830. Missing lock in JavaKeyStoreProvider.createCredentialEntry.
    (Benoy Antony via umamahesh)

    HADOOP-10928. Incorrect usage on `hadoop credential list`.
    (Josh Elser via wang)

    HADOOP-10927. Fix CredentialShell help behavior and error codes.
    (Josh Elser via wang)

    HADOOP-10933. FileBasedKeyStoresFactory Should use Configuration.getPassword 
    for SSL Passwords. (lmccay via tucu)

    HADOOP-10905. LdapGroupsMapping Should use configuration.getPassword for SSL
    and LDAP Passwords. (lmccay via brandonli)
